<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentification_background_color"
    tools:context=".project.shared.LoginActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sign up"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@android:color/white"/>


    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/logo_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        />



    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="60dp"
        android:hint="@string/email_box"
        android:textColorHighlight="@color/colorPrimary"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/edittext_background"
        android:padding="12dp"
        android:drawableLeft="@drawable/email_icon"
        android:textColorHint="@color/colorPrimary"
        android:inputType="textEmailAddress"
        android:layout_marginEnd="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_register" />
    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:hint="@string/password_box"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_box" />


    <Button
        android:id="@+id/complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:text="@string/login_btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box" />

    <TextView
        android:id="@+id/choice_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"

        android:text="@string/register"
        android:background="@drawable/choice_login_register"
        android:textColor="@color/colorPrimary"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/complete_button"
        app:layout_constraintStart_toStartOf="@+id/complete_button"
        app:layout_constraintTop_toBottomOf="@+id/complete_button" />



</androidx.constraintlayout.widget.ConstraintLayout>