<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/authentification_background_color"
    tools:context=".project.shared.RegisterActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent">
        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sign up"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="@android:color/white"/>


    </androidx.appcompat.widget.Toolbar>
    <!--<TextView
        android:id="@+id/textView"
        android:hint="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:textSize = "35sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

-->
<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/logo_register"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/contract"
    android:layout_marginStart="10dp"
    android:layout_marginTop="40dp"
    android:layout_marginEnd="8dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/toolbar"
    />


    <EditText
        android:id="@+id/nom_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/username_icon"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:hint="@string/nom_box"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:textColor="@color/colorSmalt"
        android:textColorHighlight="@color/colorSmalt"
        android:textColorHint="@color/colorSmalt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_register" />

    <EditText
        android:id="@+id/prenom_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/username_icon"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:hint="@string/prenom_box"
        android:inputType="text"
        android:padding="12dp"
        android:textColor="@color/colorSmalt"
        android:textColorHint="@color/colorSmalt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nom_box" />

    <EditText
        android:id="@+id/email_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/email_icon"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:hint="@string/email_box"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/colorSmalt"
        android:textColorHighlight="@color/colorSmalt"
        android:textColorHint="@color/colorSmalt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prenom_box" />

    <EditText
        android:id="@+id/password_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="25dp"
        android:drawableTint="#B8B8B8"
        android:hint="@string/password_box"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/colorSmalt"
        android:textColorHint="@color/colorSmalt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_box" />
    <LinearLayout
        android:id="@+id/type"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_box"
        >


        <RadioGroup
            android:id="@+id/user_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >

            <RadioButton
                android:id="@+id/teacher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:buttonTint="@color/colorSmalt"
                android:text="teacher"
                android:textSize="9pt" />

            <RadioButton
                android:id="@+id/student"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/colorSmalt"
                android:text="student"
                android:textSize="9pt" />
        </RadioGroup>
    </LinearLayout>
    <Button
        android:id="@+id/complete_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/button_style"
        android:text="@string/register_btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <TextView
        android:id="@+id/choice_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"

        android:text="@string/login"
        android:background="@drawable/choice_login_register"
        android:textColor="@color/colorPrimary"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/complete_button"
        app:layout_constraintStart_toStartOf="@+id/complete_button"
        app:layout_constraintTop_toBottomOf="@+id/complete_button" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>